--- a/css/estiloIndice.css
+++ b/css/estiloIndice.css
@@ -67,6 +67,12 @@ table{
     background-color:grey;
 }
 
+#pilotos table tr{
+    display:block;
+    margin-left:auto;
+    margin-right:auto;
+}
+
 #pilotos tr td a{
     color:#fff;
 }
