--- a/css/estiloIndice.css
+++ b/css/estiloIndice.css
@@ -15,6 +15,7 @@ body{
 table{
     display: block;
     padding: 10px;
+    weight: fit-content;
     margin-left: auto;
     margin-right: auto;   
     text-align: center;
